# scp_mcp_code_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
docs/: DEVELOPER_GUIDE.md  DEVOPS_GUIDE.md  OPENAPI_MCP_SERVER_SPEC.md
mcp_code_example/: MANIFEST.json  __init__.py  server.py
mcp_code_example/tests/: test_server.py
src/scp_mcp_code_agent/: __init__.py  agent.py  app.py  callbacks.py  config.py  mcp_client.py
src/scp_mcp_code_agent/mcp_servers/: __init__.py  filesystem_server.py
src/scp_mcp_code_agent/middleware/: __init__.py  gather_requirements.py  openapi_confirm.py  test_failure.py  write_file_confirm.py
src/scp_mcp_code_agent/prompts/: __init__.py  system_prompt.py
src/scp_mcp_code_agent/tools/: __init__.py  code_runner.py  planning.py
tests/: test_agent.py  test_agent_helpers.py  test_app.py  test_callbacks.py  test_filesystem_server.py  test_middleware.py  test_planning.py  test_tools.py
